package.json modified

--- a/package.json
+++ b/package.json
@@ -1,4 +1,26 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "description": "* [1. Prefácio](#1-prefácio)\r * [2. Resumo do projeto](#2-resumo-do-projeto)\r * [3. Objetivos de aprendizagem](#3-objetivos-de-aprendizagem)\r * [4. Considerações gerais](#4-considerações-gerais)\r * [5. Critérios de aceitação mínimos do projeto](#5-criterios-de-aceitação-mínimos-do-projeto)\r * [6. Entregáveis](#6-entregáveis)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Guias, dicas e leituras complementares](#8-guias-dicas-e-leituras-complementares)\r * [9. Checklist](#9-checklist)",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thaisdurynek/SAP004-md-links.git"
+  },
+  "keywords": [
+    "markdown",
+    "links"
+  ],
+  "author": "Thais Durynek <thais.durynek@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/thaisdurynek/SAP004-md-links/issues"
+  },
+  "homepage": "https://github.com/thaisdurynek/SAP004-md-links#readme"
 }
