--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "md-links",
-  "version": "0.1.0",
-  "description": "* [1. Prefácio](#1-prefácio)\r * [2. Resumo do projeto](#2-resumo-do-projeto)\r * [3. Objetivos de aprendizagem](#3-objetivos-de-aprendizagem)\r * [4. Considerações gerais](#4-considerações-gerais)\r * [5. Critérios de aceitação mínimos do projeto](#5-criterios-de-aceitação-mínimos-do-projeto)\r * [6. Entregáveis](#6-entregáveis)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Guias, dicas e leituras complementares](#8-guias-dicas-e-leituras-complementares)\r * [9. Checklist](#9-checklist)",
+  "version": "1.0.0",
+  "description": "Library that extracts, validates and provides statistics from .md files",
   "main": "index.js",
   "directories": {
     "test": "test"
+  },
+  "bin": {
+    "md-links": "cli.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
