--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
         "ecmaVersion": 11
     },
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "no-else-return": 0
     }
 }
